# python-hello-world

./: README.md  pyproject.toml
src/python_hello_world/: __init__.py  __main__.py
