[project]
name = "python-hello-world"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Anita Lipsky", email = "anita@purplebugs.com" }
]
dependencies = [
    "cowsay>=6.1",
    "requests>=2.32.3",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
"python-hello-world" = "python_hello_world:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/python_hello_world"]
